<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_load"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_load"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/action_export"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_import"
        android:title="@string/action_import"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/action_about"
        app:showAsAction="never" />
        
</menu>